--- a/index.html
+++ b/index.html
@@ -28,24 +28,21 @@
 
     <div class="feed">
 
-      <div class="entra-sala"></div>
-      <div class="conversa-todos"></div>
-      <div class="reservado"></div>
-      <div class="sai-sala"></div>
+      
 
 
     </div>
 
     <div class="enviar-mensagem"> 
-      <input type="text" placeholder="Escreva aqui...">
+      <input data-test="input-message" type="text" class="digitar"  placeholder="Escreva aqui...">
 
-        <ion-icon class="paper" name="paper-plane-outline"></ion-icon>
+        <ion-icon data-test="send-message" class="paper" onclick="MandarMensagens()" name="paper-plane-outline"></ion-icon> 
     </div>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script> src="js/script.js" </script>
+    <script src="js/script.js"></script>
 
 </body>
   </html>
